--- a/assets/style.css
+++ b/assets/style.css
@@ -23,11 +23,7 @@ body {
 }
 
 .recent-search-card {
-    background-color: rgb(170, 232, 255);
-    color: black;
     text-align: center;
-    /* font-weight: bold; */
-    /* text-shadow: 1px 1px 2px black; */
 }
 
 .icon-size {
@@ -43,5 +39,8 @@ body {
     .icon-size {
         width: 64px;
         height: 64px;
+        font-size: large;
     }
+
+
 }
